BinData binary docDiff is not idempotent after shrinking the binary

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.4
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v8.0
    • Execution Team 2024-10-28, Execution Team 2024-11-11
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Binary docDiff does not currently handle when the offset is larger than the preimage. This needs to be idempotent as it is possible to shrink binaries and we might need to apply a sequence of oplog for initial sync and resharding referring to data prior to the cloning data point.

            Assignee:
            Henrik Edin
            Reporter:
            Henrik Edin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: