SERVER-96075 Fix idempotency of binary diff in docDiff when binary has shrunk (#28668)

GitOrigin-RevId: 12d33ea93ad3e0c39767d5fa4079a93e9c081bb6